Changed width to max-width to display correctly on smaller screen sizes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -184,7 +184,7 @@ a {
             }
         }
         .details-text {
-            width: 35em;
+            max-width: 35em;
             margin: 0 auto;
             padding: 0.5em 0;
 
